--- a/.github/workflows/update_technologies_list.yml
+++ b/.github/workflows/update_technologies_list.yml
@@ -10,14 +10,14 @@ jobs:
   update-technologies-list:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
+          token: ${{ secrets.PAT }}
+          fetch-depth: 0
 
       - name: Generate technologies list
         run: |
@@ -35,5 +35,4 @@ jobs:
           
           git add docs/technologies.txt
           git commit -m "Update docs/technologies.txt [skip ci]" -m "Automated update of technologies list"
-          
-          git push origin ${{ github.event.repository.default_branch }}
+          git push
